plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.3'
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}


group 'com.LuisPPB16'
version '1.1.0'

intellij {
    version = '2024.1'
    type = 'IC'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.datafaker:datafaker:2.0.2'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'com.h2database:h2:2.2.224'
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

patchPluginXml {
    sinceBuild = '241'
    untilBuild = '252.*'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

prepareSandbox {
    from configurations.runtimeClasspath
    into "$destinationDir/lib"
}

buildPlugin {
    from configurations.runtimeClasspath
    into 'lib'
}
